# OpenFFD

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FINAL_STATUS_REPORT.md  GPU_README.md  MIGRATION_SUCCESS.md  UNIVERSAL_CFD_FRAMEWORK.md  benchmark.py  calculations.txt  debug_connectivity.py  debug_face_indices.py  debug_fluent_format.py  debug_gui_extraction.py  debug_meshio_data.py  debug_point_coordinates.py  debug_point_mapping.py  debug_pyvista_mesh.py  debug_surface_rendering.py  debug_zone_assignment.py  debug_zone_faces.py  export_plot3d.py  ffd_generator.py  formulas_latex.tex  optimization_formulas.tex  pyproject.toml  readme.md  requirements.txt  setup.py  test_ffd_modes.py  test_fixed_format.py  test_force_extraction.py  test_gui_integration.py  test_gui_surfaces.py  test_gui_zone_emission.py  test_mesh_reader.py  test_native_simple.py  test_native_vs_meshio.py  test_no_downsampling.py  test_professional_rendering.py  test_rocket_visualization.py  (+6 more)
benchmarks/: README.md  __init__.py  academic_plotting_utils.py  benchmark_config.py  benchmark_runner.py  data_generator.py  example_usage.py  ffd_benchmark.py  hffd_benchmark.py  hierarchical_ffd_benchmark.py  mesh_complexity_scaling.py  parallelization_scalability.py  run_benchmarks.py  run_example.py  visualization.py  visualization_performance.py
benchmarks/data/: cylinder_100000_points.npz  cylinder_10000_points.npz  (+22 more)
debug/: debug_meshio_zone_correlation.py
docs/: hierarchical_ffd.md  parallel_processing.md
examples/: README_CFD.md  README_CFD_Optimization.md  cfd_optimization_example.py  generate_sample_case.py  hierarchical_ffd_example.py  naca0012_optimization_clean.py  run_naca0012_optimization.sh  test_cfd_components.py  test_file_generation.py  test_imports.py  zone_extractor_example.py
ffd_utils/: __init__.py  control_box.py  io.py  visualization.py
mesh_readers/: __init__.py  fluent_reader.py  general_reader.py
scripts/: README.md  launch_gui.py
tests/: test_cgns_reader.py  test_gui_export.py  test_intelligent_assignment.py  test_mesh_reader_meshio.py  test_native_parser.py  test_zone_extraction.py  test_zone_extractor.py
(+633 files in other folders)
