[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openffd"
version = "1.0.0"
description = "An open-source FFD (Free-Form Deformation) control box generator for computational meshes"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Emil Mammadli", email = "user@example.com"}
]
keywords = ["ffd", "free-form deformation", "mesh", "cfd", "optimization", "adjoint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "pyvista>=0.34.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pre-commit",
    "tox",
]
meshio = [
    "meshio>=5.0.0",
]
docs = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.2.0",
    "mkdocstrings>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/pncln/openffd"
Issues = "https://github.com/pncln/openffd/issues"
Documentation = "https://openffd.readthedocs.io"

[project.scripts]
openffd = "openffd.cli.app:main"

[tool.setuptools]
packages = ["openffd"]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/openffd/_version.py"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
